<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_calculator"
        android:name="ru.mirea.yatsenko.mireaproject.ui.fragments.CalculateFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/fragment_calculate" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.mirea.yatsenko.mireaproject.ui.fragments.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/nav_music"
        android:name="ru.mirea.yatsenko.mireaproject.ui.fragments.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music" />
    <fragment
        android:id="@+id/nav_apparat_functions"
        android:name="ru.mirea.yatsenko.mireaproject.ui.fragments.ApparatFunctionsFragment"
        android:label="@string/menu_apparat_functions"
        tools:layout="@layout/fragment_apparat_functions" />
    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.yatsenko.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.yatsenko.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.yatsenko.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>